ASSERTION: ASSERT(isMainThread()); when watching protected content with MediaSourceUseRemoteAudioVideoRenderer enabled https://bugs.webkit.org/show_bug.cgi?id=303035 rdar://165322277

Reviewed by Youenn Fablet.

The SourceBufferParser runs in a dedicated WorkQueue ; if the CDMPrivateFairPlayStreaming::sinfName, sdkName, mptsName
were first accessed on that queue, their MainThreadNeverDestroyed container's constructor would assert.

Due to the multi-threaded nature of the SourceBufferParser / SourceBufferPrivate / MediaPlayerPrivate
we replace the use of AtomString with String. Almost all CDMs were using Strings in
their API but the initialisation, so using String isn't much of a jump.

No change in observable behaviours. Covered by existing tests.

Canonical link: https://commits.webkit.org/303490@main